# usbdeckrec

./: .dockerignore  .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/usbdeckrec/audio/: AudioEngineBridge.kt  AudioEngineManager.kt  AudioFormat.kt  MixerProfile.kt
app/src/main/java/com/usbdeckrec/midi/: FaderAutomationHandler.kt  MidiEvent.kt  MidiParser.kt
app/src/main/java/com/usbdeckrec/model/: RecordedTrack.kt  RecordingState.kt
app/src/main/java/com/usbdeckrec/service/: NotificationHelper.kt  RecordingService.kt  RecoveryHelper.kt  StorageHelper.kt  (+1 more)
app/src/main/jni/: AudioCaptureEngine.cpp  AudioCaptureEngine.h  CMakeLists.txt  ChannelExtractor.cpp  ChannelExtractor.h  DjmBulkCaptureEngine.cpp  DjmBulkCaptureEngine.h  EncoderSink.cpp  EncoderSink.h  FlacEncoder.cpp  FlacEncoder.h  LockFreeQueue.cpp  LockFreeQueue.h  NativeBridge.cpp  UsbIsochronousCaptureEngine.cpp  UsbIsochronousCaptureEngine.h  WavEncoder.cpp  WavEncoder.h
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/com/usbdeckrec/: ChannelExtractionTest.kt  FaderAutomationHandlerTest.kt  MidiParserTest.kt  MixerProfileTest.kt  TrackMarkerDaoTest.kt
docker/: Dockerfile  build-apk.sh  deploy-apk.sh  docker-compose.yml
gradle/: libs.versions.toml
(+23 files in other folders)
